Engine deletion step A: results land on core records; exec shadows deleted
Core gains the consumer surface the engine module was providing:
- exec/ResultJson — the array-of-row-objects JSON wire, ported from the
  engine's ExecutionResult.toJsonArray/writeJsonValue (same value policy,
  RFC 8259 escaping; Graph json passes through verbatim; core-only List/
  Map cells emit as real JSON, not toString).
- Executor.stream — the streaming entry, reusing the SAME cell/column
  machinery as the materialized path (tabularSchema/resolveColumns/
  shapeRow extracted; one set of shaping rules): TABULAR lazy per-row,
  GRAPH per-row json_object verbatim, scalar/collection materialize.
  The [sql] stderr dump is one shared helper (observability guardrail
  stays frozen at 40 sites).
- Compiler.executeStreaming — orchestrator sharing lowerQuery with the
  plan surface (one phase sequence, the audit-15 rule); dialect binds to
  the actual session.
- ExecutionResult grows columnCount + asScalar/asCollection/asTabular/
  asGraph (the ported engine accessor surface).

Engine retargets onto core records: QueryService (all four families —
CoreBridge/PlanGenerator/PlanExecutor deps gone), serial JSON/CSV
serializers, LegendHttpServer handlers, TestSuiteRunner. ~30 engine test
files migrate (core imports, Scalar/Collection/Tabular/Graph names,
Compiler.plan for SQL-shape assertions); PCT's ExecuteLegendLiteQuery
result-dispatch half moves to core Type shapes (rawFqn/arguments/fqn),
its metadata-extraction half stays on the engine model it prints.

DELETED at census-zero inbound: server/CoreBridge, exec/PlanExecutor,
exec/ExecutionResult, exec/Column, exec/Row, PlanGenerator.generate
(the static core bridge).

Gates: full 8-gate chain green (core 1678, engine 2694, DuckDB+h2
corpus, PCT 1109/1109, h2modern ledger 348/1/22, parity 26168/0).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01M8ZucjmbY8SgWekse9TzJ1